kubernetes2-assignment/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app2-service
spec:
  type: ClusterIP
  selector:
    app: nginx-app2
  ports:
  - port: 80
    targetPort: 80
