kubernetes2-assignment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /nginx1
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /nginx2
        pathType: Prefix
        backend:
          service:
            name: nginx-app2-service
            port:
              number: 80
